FIXME: Update ruby-dbus dependency
FIXME: use an actual released version once the code is tested to work

--- a/service/Gemfile
+++ b/service/Gemfile
@@ -23,6 +23,7 @@
 source "https://rubygems.org"
 
 gemspec
+gem "ruby-dbus", git: "https://github.com/mvidner/ruby-dbus", branch: "object-manager-service"
 
 group :development do
   gem "byebug"
