--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,8 @@ jobs:
     - name: Build the application
       run: make
 
-    # - name: Build the application
-    #   run: npm run build --if-present
+    - name: Check types
+      run: npm run check-types
 
     - name: Run the tests and generate coverage report
       run: npm test -- --coverage
