[web] Add support for type-checking .js files

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -3,7 +3,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "target": "esnext",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "allowJs": true,
+    "jsx": "react-jsx",
+    "allowSyntheticDefaultImports": true,
   },
   "include": [
     "src"
