--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,7 @@
     "eslint": "eslint --ext .js --ext .jsx src/",
     "eslint:fix": "eslint --fix --ext .js --ext .jsx src/",
     "check-types": "tsc",
-    "jsdoc": "npx jsdoc -c jsdoc.conf.json && echo Tip: && echo xdg-open jsdoc.out/index.html",
+    "jsdoc": "npx jsdoc -c jsdoc.conf.json --readme README.md && echo Tip: && echo xdg-open jsdoc.out/index.html",
     "test": "jest"
   },
   "devDependencies": {
