--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "eslint:fix": "eslint --fix --ext .js --ext .jsx src/",
     "check-types": "tsc",
     "jsdoc": "npx jsdoc -c jsdoc.conf.json --readme README.md && echo Tip: && echo xdg-open jsdoc.out/index.html",
+    "doc": "npx typedoc src src/client",
     "test": "jest"
   },
   "devDependencies": {
@@ -59,6 +60,7 @@
     "string-replace-loader": "^3.0.0",
     "surge": "^0.23.1",
     "terser-webpack-plugin": "^5.1.4",
+    "typedoc": "^0.23.15",
     "webpack": "^5.54.0",
     "webpack-cli": "^4.9.1"
   },
@@ -73,6 +75,7 @@
     "react-dom": "17.0.2",
     "react-router-dom": "^6.3.0",
     "react-teleporter": "^3.0.2",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "typedoc-plugin-missing-exports": "^1.0.0"
   }
 }
